--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -35,7 +35,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="">New Task</a></li>
-            <li><a href="">Categories</a></li>
+            <li><a href="{{ url_for('') }}">Categories</a></li>
         </ul>
     </header>
 
